--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,16 @@ build/
 compile_commands.json
 # Doc diagram cache
 **/.asciidoctor/
+# Python cache
+__pycache__/
+*.py[cod]
+*$py.class
+
+# cppcheck
+cppcheck-artifacts/*
+
+# lizard
+lizard-artifacts/*
+
+# changelog
+changelog.txt
