Replace '_' with '-' in folder names

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -5,10 +5,10 @@
             "name": "Test Debug",
             "type": "cppdbg",
             "request": "launch",
-            "program": "${workspaceFolder}/very_simple_kernel/build/test/out/${command:ceedlingExplorer.debugTestExecutable}",
+            "program": "${workspaceFolder}/very-simple-kernel/build/test/out/${command:ceedlingExplorer.debugTestExecutable}",
             "args": [],
             "stopAtEntry": false,
-            "cwd": "${workspaceFolder}/very_simple_kernel",
+            "cwd": "${workspaceFolder}/very-simple-kernel",
             "environment": [],
             "externalConsole": false,
             "MIMode": "gdb",
