--- a/.gitattributes
+++ b/.gitattributes
@@ -41,4 +41,4 @@
 *.exe filter=lfs diff=lfs merge=lfs -text
 
 # Exceptions
-readme_assets/*.png filter= diff= merge= binary
+readme-assets/*.png filter= diff= merge= binary
