--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -8,7 +8,7 @@
             "group": "build",
             "problemMatcher": [],
             "options": {
-                "cwd": "${workspaceFolder}/very_simple_kernel"
+                "cwd": "${workspaceFolder}/very-simple-kernel"
             },
             "presentation": {
                 "panel": "new"
@@ -21,7 +21,7 @@
             "group": "build",
             "problemMatcher": [],
             "options": {
-                "cwd": "${workspaceFolder}/very_simple_kernel"
+                "cwd": "${workspaceFolder}/very-simple-kernel"
             },
             "presentation": {
                 "panel": "new"
@@ -34,7 +34,7 @@
             "group": "test",
             "problemMatcher": [],
             "options": {
-                "cwd": "${workspaceFolder}/very_simple_kernel"
+                "cwd": "${workspaceFolder}/very-simple-kernel"
             },
             "presentation": {
                 "panel": "new"
