Update type convention (_t) and convert supervisors to class types

--- a/project.yml
+++ b/project.yml
@@ -30,6 +30,7 @@
         - -:test/support
     :source:
         - src/**
+        - c-tool-box/src/**
     :include:
         - src/**
         - c-tool-box/src/**
